[project]
name = "zaber_bson"
version = "0.1.0"
description = "Lightweight BSON codec for Python"
authors = [
    {name = "Zaber Technologies", email = "software@zaber.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "BSD"}

[project.urls]
homepage = "https://github.com/zabertech/bson"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = { call = "test.__init__:main" }
check = { composite = ["pylint", "mypy"] }
mypy = "mypy src"
pylint = "pylint src"

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.10.0",
    "pylint>=3.2.3",
]

[tool.pylint]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "too-few-public-methods",
    "too-many-branches",
    "too-many-statements",
    "too-many-locals",
    "too-many-arguments",
    "global-variable-not-assigned",
]
max-line-length = 120
